# preservation-cornball-by-komplex

./: .gitignore  README.md  rebuild-demo.bat
documentation/: 01-artifact-inventory.md  02-static-analysis.md  03-source-reconstruction.md  04-video-reference.md  05-reference-frame-sampling.md  06-intro-first-screen.md  07-intro-second-stage.md  08-intro-caller-recovery.md  (+6 more)
reverse/work/reconstruction/: CMakeLists.txt  README.md
reverse/work/reconstruction/captures/intro-opening/: intro_frame_000000.tga  intro_frame_000001.tga  intro_frame_000002.tga  intro_frame_000003.tga  intro_frame_000004.tga  intro_frame_000005.tga  intro_frame_000006.tga  intro_frame_000007.tga  intro_frame_000008.tga  intro_frame_000009.tga  intro_frame_000010.tga  intro_frame_000011.tga  intro_frame_000012.tga  intro_frame_000013.tga  intro_frame_000014.tga  intro_frame_000015.tga
reverse/work/reconstruction/captures/intro-second-stage/: intro_frame_000000.tga  intro_frame_000001.tga  intro_frame_000002.tga  intro_frame_000003.tga  intro_frame_000004.tga  intro_frame_000005.tga  intro_frame_000006.tga  intro_frame_000007.tga  intro_frame_000008.tga  intro_frame_000009.tga  intro_frame_000010.tga  intro_frame_000011.tga  intro_frame_000012.tga  intro_frame_000013.tga  intro_frame_000014.tga  intro_frame_000015.tga
reverse/work/reconstruction/captures/intro-second-stage-frame60/: intro_frame_000000.tga  intro_frame_000001.tga
reverse/work/reconstruction/captures/replay-kaar/: replay_frame_000000.tga
reverse/work/reconstruction/captures/replay-kaar-13/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter1/scene0/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter1/scene1/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter1/scene3/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter2/: samples.csv
reverse/work/reconstruction/captures/scene-consolidation-iter2/scene1-early/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter2/scene2-early/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter2/scene2-mid/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter2/scene3-early/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter2/scene3-late/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter3-scene1-burst/: replay_frame_000000.tga  replay_frame_000001.tga  replay_frame_000003.tga  replay_frame_000007.tga  replay_frame_000008.tga  replay_frame_000009.tga  replay_frame_000011.tga
reverse/work/reconstruction/captures/scene-consolidation-iter4/scene0-early/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter4/scene0-late/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter4/scene0-mid/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter4/scene1-late/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter4/scene2-late/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter4/scene3-early/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter4/scene3-late/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-iter4/scene3-mid/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-step-hz/hz-25/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-step-hz/hz-30/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene-consolidation-step-hz/hz-50/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene1-alpha-burst/: replay_frame_000000.tga  replay_frame_000001.tga  replay_frame_000002.tga  replay_frame_000003.tga  replay_frame_000004.tga  replay_frame_000005.tga  replay_frame_000006.tga  replay_frame_000007.tga  replay_frame_000008.tga  replay_frame_000009.tga  replay_frame_000010.tga  replay_frame_000011.tga  replay_frame_000012.tga  replay_frame_000013.tga  replay_frame_000014.tga  replay_frame_000015.tga
reverse/work/reconstruction/captures/scene1-force-main-anchor-translate-fix/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene1-force-main-anchor-txt1-tail-pass/: replay_frame_000000.tga
reverse/work/reconstruction/captures/scene1-force-main-burst/: replay_frame_000000.tga  replay_frame_000001.tga  replay_frame_000002.tga  replay_frame_000003.tga  replay_frame_000005.tga  replay_frame_000006.tga  replay_frame_000007.tga  replay_frame_000008.tga  replay_frame_000009.tga  replay_frame_000010.tga  replay_frame_000011.tga  replay_frame_000012.tga  replay_frame_000013.tga  replay_frame_000015.tga
reverse/work/reconstruction/captures/scene1-isolate-tube-burst/: replay_frame_000001.tga
reverse/work/reconstruction/captures/scene1-isolate-tube-burst-translate-fix-preanchor/: replay_frame_000001.tga
reverse/work/reconstruction/captures/surf-smoke/: surf_frame_000000.tga
reverse/work/reconstruction/include/cornball/: capture.h  demo_script.h  fla_gl.h  fla_scene.h  intro_gl.h  intro_scene.h  kaar_gl.h  kaar_scene.h  random.h  s_pair_gl.h  s_pair_scene.h  surf_gl.h  surf_scene.h
reverse/work/reconstruction/src/: cornball_capture.c  cornball_demo_replay_win32.c  cornball_demo_script.c  cornball_fla_gl.c  cornball_fla_preview_win32.c  cornball_fla_scene.c  cornball_intro_gl.c  cornball_intro_preview_win32.c  cornball_intro_scene.c  cornball_kaar_gl.c  cornball_kaar_preview_win32.c  cornball_kaar_scene.c  cornball_random.c  cornball_s_pair_gl.c  cornball_s_pair_scene.c  cornball_surf_gl.c  cornball_surf_preview_win32.c  cornball_surf_scene.c
reverse/work/reconstruction/tests/: demo_script_smoketest.c  fla_scene_smoketest.c  intro_scene_smoketest.c  kaar_scene_smoketest.c  s_pair_scene_smoketest.c  surf_scene_smoketest.c
(+48 files in other folders)
